    (Nikita)
  . Fixed bug #73998 (array_key_exists fails on arrays created by
    get_object_vars). (mhagstrand)
  . Fixed bug #73954 (NAN check fails on Alpine Linux with musl). (Andrea)
  . Fixed bug #74039 (is_infinite(-INF) returns false). (Christian Schmidt)

- Apache:
  . Fixed bug #61471 (Incomplete POST does not timeout but is passed to PHP).
    (Zheng Shao)

- FPM:
  . Fixed bug #69860 (php-fpm process accounting is broken with keepalive).
    (Denis Yeldandi)

- GD:
  . Fixed bug #74031 (ReflectionFunction for imagepng is missing last two
    parameters). (finwe)

- Mysqlnd:
  . Fixed bug #74021 (fetch_array broken data. Data more then MEDIUMBLOB).
    (Andrew Nester, Nikita)

- Opcache:
  . Fixed bug #74019 (Segfault with list). (Laruence)

- OpenSSL:
  . Fixed bug #74022 (PHP Fast CGI crashes when reading from a pfx file).
    (Anatol)

- Reflection:
  . Fixed bug #74035 (getNumberOfRequiredParameters wrong for
    ReflectionClass::newInstance). (Andrew Nester)

- Standard:
  . Fixed bug #74005 (mail.add_x_header causes RFC-breaking lone line feed).
    (Anatol)
  . Fixed bug #73118 (is_callable callable name reports misleading value for
    anonymous classes). (Adam Saponara)

- Streams:
  . Fixed bug #73496 (Invalid memory access in zend_inline_hash_func).
    (Laruence)


16 Feb 2017 PHP 7.0.16

- Core:
  . Fixed bug #73916 (zend_print_flat_zval_r doesn't consider reference).
    (Laruence)
  . Fixed bug #73876 (Crash when exporting **= in expansion of assign op).
    (Sara)
  . Fixed bug #73969 (segfault in debug_print_backtrace). (andrewnester)
  . Fixed bug #73973 (assertion error in debug_zval_dump). (andrewnester)

- DOM:
  . Fixed bug #54382 (getAttributeNodeNS doesn't get xmlns* attributes).
    (aboks)

- DTrace:
  . Fixed bug #73965 (DTrace reported as enabled when disabled). (Remi)

- FPM:
  . Fixed bug #67583 (double fastcgi_end_request on max_children limit).
    (Dmitry Saprykin)