@@ -154,7 +154,7 @@ static void do_adjust_for_weekday(timelib_time* time)
 	{
 		/* To make "this week" work, where the current DOW is a "sunday" */
 		if (current_dow == 0 && time->relative.weekday != 0) {
-			time->relative.weekday = -6;
+			time->relative.weekday -= 7;
 		}
 
 		/* To make "sunday this week" work, where the current DOW is not a
@@ -354,7 +354,7 @@ static timelib_sll do_years(timelib_sll year)
 	return res;
 }
 
-static timelib_sll do_months(timelib_ull month, timelib_ull year)
+static timelib_sll do_months(timelib_ull month, timelib_sll year)
 {
 	if (timelib_is_leap(year)) {
 		return ((month_tab_leap[month - 1] + 1) * SECS_PER_DAY);
@@ -463,7 +463,7 @@ void timelib_update_ts(timelib_time* time, timelib_tzinfo* tzi)
 	time->sse = res;
 
 	time->sse_uptodate = 1;
-	time->have_relative = time->relative.have_weekday_relative = time->relative.have_special_relative = 0;
+	time->have_relative = time->relative.have_weekday_relative = time->relative.have_special_relative = time->relative.first_last_day_of = 0;
 }
 
 #if 0
