@@ -189,6 +189,7 @@ void timelib_unixtime2local(timelib_time *tm, timelib_sll ts)
 
 			timelib_unixtime2gmt(tm, ts - (tm->z * 60) + (tm->dst * 3600));
 
+			tm->sse = ts;
 			tm->z = z;
 			tm->dst = dst;
 			break;
